--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Raleway:wght@500;600;700&display=swap');
 html {
     scroll-behavior: smooth;
+    text-align: justify;
 }
 
 .angka-wrapper {
